--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vitepress",
+  "name": "vpress",
   "version": "0.4.0",
   "description": "",
   "main": "dist/node/index.js",
@@ -71,6 +71,7 @@
     "prismjs": "^1.20.0",
     "slash": "^3.0.0",
     "vite": "^1.0.0-beta.1",
+    "vpress-mdi-details": "^1.1.1",
     "vue": "^3.0.0-beta.15"
   },
   "devDependencies": {
